# Oracle

./: .env.example  .gitignore  Dockerfile  Dockerfile.auth  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
auth/: db.py  main.py  router.py  service.py
sql/: 01_create_rule_tables.sql  02_seed_default_thresholds.sql  03_create_judgment_table.sql  04_extend_rule_thresholds_marginal.sql  05_create_lot_history_series.sql  06_create_threshold_proposals.sql  07_create_local_user_replica.sql  08_extend_local_user_replica.sql
src/: app.py  config.py  main.py
src/cache/: alarm_counter.py  equipment_cache.py  lot_history.py  rule_cache.py
src/db/: auth_sync.py  historian_queries.py  lot_history.py  pool.py  rule_db.py
src/engine/: alarm_rules.py  comment_generator.py  ewma_mad.py  fail_aggregator.py  feature_extractor.py  isolation_forest.py  lot_rules.py  marginal_detector.py  recipe_rules.py  recommendation_engine.py  recommendation_rules.yml  rule_engine.py  secondary_validator.py  status_rules.py  thresholds.py  unit_rules.py
src/handlers/: __init__.py  threshold_approval.py
src/models/: events.py  judgment.py  lot_report.py  oracle_analysis.py
src/mqtt/: client.py  (+2 more)
tests/: conftest.py  test_alarm_recipe_status.py  test_auth_api.py  test_auth_sync.py  test_backoff.py  test_lot_report_phase1.py  test_lot_rules.py  test_mock_compatibility.py  test_mqtt_publish.py  test_oracle_analysis.py  test_phase2_secondary_validation.py  test_rule_engine_integration.py  test_subscriber_dispatch.py  test_unit_rules.py
명세서/: Oracle_작업명세서.md
(+5 files in other folders)
